force-app/main/default/objects/Team__c/fields/Played_Home_Matches_Count__c.field-meta.xml
<CustomField>
    <fullName>Played_Home_Matches_Count__c</fullName>
    <description>Define number of games with scores that team played at home</description>
    <label>Played Home Matches Count</label>
    <summaryForeignKey>Match__c.Home_Team__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>