force-app/main/default/objects/Team__c/fields/Total_Active_Players__c.field-meta.xml
<CustomField>
    <fullName>Total_Active_Players__c</fullName>
    <description>total number of active players</description>
    <label>Total Active Players</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>