force-app/main/default/objects/Team__c/fields/Total_Wins__c.field-meta.xml
<CustomField>
    <fullName>Total_Wins__c</fullName>
    <defaultValue>0</defaultValue>
    <description>total wins of the team</description>
    <label>Total Wins</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>